fix header content spacing in larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,11 @@ body {
 .header--content {
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.header--info {
+  margin-right: auto;
 }
 
 .header--content {
